[gd_scene load_steps=6 format=2]

[ext_resource path="res://addons/CodeSnippetPopup/CodeSnippetPopup.gd" type="Script" id=1]
[ext_resource path="res://addons/CodeSnippetPopup/Secondary/SnippetEditor.tscn" type="PackedScene" id=2]
[ext_resource path="res://addons/CodeSnippetPopup/Secondary/OptionsPopup.tscn" type="PackedScene" id=3]

[sub_resource type="Image" id=3]
data = {
"data": PoolByteArray( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ),
"format": "LumAlpha8",
"height": 16,
"mipmaps": false,
"width": 16
}

[sub_resource type="ImageTexture" id=2]
flags = 4
flags = 4
image = SubResource( 3 )
size = Vector2( 16, 16 )

[node name="CodeSnippetPopup" type="PopupPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Main" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Main"]
margin_right = 1016.0
margin_bottom = 592.0

[node name="HBoxContainer" type="HBoxContainer" parent="Main/VBoxContainer"]
margin_right = 1016.0
margin_bottom = 26.0

[node name="Filter" type="LineEdit" parent="Main/VBoxContainer/HBoxContainer"]
margin_right = 808.0
margin_bottom = 26.0
hint_tooltip = "Ending the search_string with \" X\" (space + integer) will jump to the X-th item in the list.

Click the \"Edit\" button to edit the code snippets. 
Within the snippet editor is a \"Help\" page. Please look at it to see how to format snippets and how to use tabstops etc.
Most control nodes (Labels, Buttons & TextEdits) also have tooltips."
size_flags_horizontal = 3
clear_button_enabled = true
right_icon = SubResource( 2 )
placeholder_text = "Look at this tooltip for help."
caret_blink = true
caret_blink_speed = 0.5

[node name="Copy" type="Button" parent="Main/VBoxContainer/HBoxContainer"]
margin_left = 812.0
margin_right = 873.0
margin_bottom = 26.0
hint_tooltip = "Copy the selected snippet to your clipboard. The copy will include all jump markers/tabstops WITHOUT the ability to use the jumping."
text = "Copy"
icon = SubResource( 2 )

[node name="Edit" type="Button" parent="Main/VBoxContainer/HBoxContainer"]
margin_left = 877.0
margin_right = 931.0
margin_bottom = 26.0
hint_tooltip = "Open the built-in SnippetEditor"
text = "Edit"
icon = SubResource( 2 )

[node name="Settings" type="Button" parent="Main/VBoxContainer/HBoxContainer"]
margin_left = 935.0
margin_right = 1016.0
margin_bottom = 26.0
hint_tooltip = " Configuration options for this plugin."
text = "Settings"
icon = SubResource( 2 )

[node name="ItemList" type="ItemList" parent="Main/VBoxContainer"]
margin_top = 30.0
margin_right = 1016.0
margin_bottom = 592.0
size_flags_horizontal = 3
size_flags_vertical = 3
items = [ " 0  :: ", null, false, "_ready", null, false, "", null, true, " 1  :: ", null, false, "_enter_tree", null, false, "", null, true, " 2  :: ", null, false, "_exit_tree", null, false, "", null, true, " 3  :: ", null, false, "_physics_process", null, false, " (delta : float)", null, true, " 4  :: ", null, false, "_process", null, false, " (delta : float)", null, true, " 5  :: ", null, false, "_input", null, false, " (event : InputEvent)", null, true, " 6  :: ", null, false, "_unhandled_input", null, false, " (event : InputEvent)", null, true, " 7  :: ", null, false, "_unhandled_key_input", null, false, " (event : InputEventKey)", null, true, " 8  :: ", null, false, "_gui_input", null, false, " (event : InputEvent)", null, true, " 9  :: ", null, false, "_draw", null, false, "", null, true ]
max_columns = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsPopup" type="WindowDialog" parent="."]
visible = true
margin_left = 4.0
margin_top = 4.0
margin_right = 1020.0
margin_bottom = 596.0
rect_min_size = Vector2( 600, 325 )
popup_exclusive = true
window_title = "Settings"
resizable = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Main" type="MarginContainer" parent="SettingsPopup"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="SettingsPopup/Main"]
margin_right = 976.0
margin_bottom = 552.0

[node name="HBoxContainer" type="HBoxContainer" parent="SettingsPopup/Main/VBoxContainer"]
margin_right = 976.0
margin_bottom = 24.0

[node name="CustomShortcut" type="Label" parent="SettingsPopup/Main/VBoxContainer/HBoxContainer"]
margin_top = 5.0
margin_right = 250.0
margin_bottom = 19.0
rect_min_size = Vector2( 250, 0 )
hint_tooltip = "Clicking the EditButton will record the next pressed Keyboard input. You can also manually enter the keyboard shortcut.
Check Godot's shortcuts to see what the proper format is (Editor >Editor Settings > Shortcuts). 
Make sure you do it right. Otherwise you won't be able to open the plugin anymore. In that case you need to redownload the plugin or manually edit the settings.cfg file to reset the settings.
"
mouse_filter = 1
text = "Keyboard shortcut"

[node name="ShortcutLineEdit" type="LineEdit" parent="SettingsPopup/Main/VBoxContainer/HBoxContainer"]
margin_left = 254.0
margin_right = 943.0
margin_bottom = 24.0
rect_min_size = Vector2( 165, 0 )
hint_tooltip = "Clicking the EditButton will record the next pressed Keyboard input. You can also manually enter the keyboard shortcut.
Check Godot's shortcuts to see what the proper format is (Editor >Editor Settings > Shortcuts). 
Make sure you do it right. Otherwise you won't be able to open the plugin anymore. In that case you need to redownload the plugin or manually edit the settings.cfg file to reset the settings.
"
mouse_filter = 1
size_flags_horizontal = 11
text = "Control+T"

[node name="EditShortcutButton" type="Button" parent="SettingsPopup/Main/VBoxContainer/HBoxContainer"]
margin_left = 947.0
margin_right = 976.0
margin_bottom = 24.0
rect_min_size = Vector2( 29, 0 )
hint_tooltip = "Clicking the EditButton will record the next pressed Keyboard input. You can also manually enter the keyboard shortcut.
Check Godot's shortcuts to see what the proper format is (Editor >Editor Settings > Shortcuts). 
Make sure you do it right. Otherwise you won't be able to open the plugin anymore. In that case you need to redownload the plugin or manually edit the settings.cfg file to reset the settings.
"
size_flags_horizontal = 8
icon = SubResource( 2 )

[node name="HBoxContainer2" type="HBoxContainer" parent="SettingsPopup/Main/VBoxContainer"]
margin_top = 28.0
margin_right = 976.0
margin_bottom = 52.0

[node name="AdaptiveHeight" type="Label" parent="SettingsPopup/Main/VBoxContainer/HBoxContainer2"]
margin_top = 5.0
margin_right = 250.0
margin_bottom = 19.0
rect_min_size = Vector2( 250, 0 )
hint_tooltip = "Change the height of the popup based on the number of items in the list."
mouse_filter = 1
text = "Adaptive height"

[node name="AdaptiveHeightCheckBox" type="CheckBox" parent="SettingsPopup/Main/VBoxContainer/HBoxContainer2"]
margin_left = 952.0
margin_right = 976.0
margin_bottom = 24.0
hint_tooltip = "Change the height of the popup based on the number of items in the list."
size_flags_horizontal = 10
pressed = true

[node name="HBoxContainer10" type="HBoxContainer" parent="SettingsPopup/Main/VBoxContainer"]
margin_top = 56.0
margin_right = 976.0
margin_bottom = 80.0

[node name="StatusUpdate" type="Label" parent="SettingsPopup/Main/VBoxContainer/HBoxContainer10"]
margin_top = 5.0
margin_right = 135.0
margin_bottom = 19.0
hint_tooltip = "Show a popup when the snippet is completely inserted (i.e. all jumps and mirroring is done) or when the insertion is aborted via the Esc key."
mouse_filter = 1
text = "Show status  updates"

[node name="StatusUpdatesCheckBox" type="CheckBox" parent="SettingsPopup/Main/VBoxContainer/HBoxContainer10"]
margin_left = 952.0
margin_right = 976.0
margin_bottom = 24.0
hint_tooltip = "Show a popup when the snippet is completely inserted (i.e. all jumps and mirroring is done) or when the insertion is aborted via the Esc key."
size_flags_horizontal = 10
pressed = true

[node name="HBoxContainer8" type="HBoxContainer" parent="SettingsPopup/Main/VBoxContainer"]
margin_top = 84.0
margin_right = 976.0
margin_bottom = 108.0

[node name="Label" type="Label" parent="SettingsPopup/Main/VBoxContainer/HBoxContainer8"]
margin_top = 5.0
margin_right = 250.0
margin_bottom = 19.0
hint_tooltip = "Instead of appearing at the screen center, the popup will apear at the text cursor position (or at least tries to)."
mouse_filter = 1
text = "Main popup at cursor position (approx.)"

[node name="AtCursorCheckbox" type="CheckBox" parent="SettingsPopup/Main/VBoxContainer/HBoxContainer8"]
margin_left = 952.0
margin_right = 976.0
margin_bottom = 24.0
hint_tooltip = "Instead of appearing at the screen center, the popup will apear at the text cursor position (or at least tries to)."
size_flags_horizontal = 10

[node name="HBoxContainer3" type="HBoxContainer" parent="SettingsPopup/Main/VBoxContainer"]
margin_top = 112.0
margin_right = 976.0
margin_bottom = 136.0

[node name="PopupHeight" type="Label" parent="SettingsPopup/Main/VBoxContainer/HBoxContainer3"]
margin_top = 5.0
margin_right = 250.0
margin_bottom = 19.0
rect_min_size = Vector2( 250, 0 )
mouse_filter = 1
text = "Main popup's height"

[node name="PopupHeightSpinBox" type="SpinBox" parent="SettingsPopup/Main/VBoxContainer/HBoxContainer3"]
margin_left = 254.0
margin_right = 976.0
margin_bottom = 24.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 11
max_value = 6000.0
value = 500.0

[node name="HBoxContainer4" type="HBoxContainer" parent="SettingsPopup/Main/VBoxContainer"]
margin_top = 140.0
margin_right = 976.0
margin_bottom = 164.0

[node name="PopupWidth" type="Label" parent="SettingsPopup/Main/VBoxContainer/HBoxContainer4"]
margin_top = 5.0
margin_right = 250.0
margin_bottom = 19.0
rect_min_size = Vector2( 250, 0 )
mouse_filter = 1
text = "Main popup's width"

[node name="PopupWidthSpinBox" type="SpinBox" parent="SettingsPopup/Main/VBoxContainer/HBoxContainer4"]
margin_left = 254.0
margin_right = 976.0
margin_bottom = 24.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 11
max_value = 6000.0
value = 750.0

[node name="HBoxContainer5" type="HBoxContainer" parent="SettingsPopup/Main/VBoxContainer"]
margin_top = 168.0
margin_right = 976.0
margin_bottom = 192.0

[node name="EditorHeight" type="Label" parent="SettingsPopup/Main/VBoxContainer/HBoxContainer5"]
margin_top = 5.0
margin_right = 250.0
margin_bottom = 19.0
rect_min_size = Vector2( 250, 0 )
mouse_filter = 1
text = "Snippet editor's popup height"

[node name="EditorHeightSpinBox" type="SpinBox" parent="SettingsPopup/Main/VBoxContainer/HBoxContainer5"]
margin_left = 254.0
margin_right = 976.0
margin_bottom = 24.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 11
max_value = 6000.0
value = 800.0

[node name="HBoxContainer6" type="HBoxContainer" parent="SettingsPopup/Main/VBoxContainer"]
margin_top = 196.0
margin_right = 976.0
margin_bottom = 220.0

[node name="EditorWidth2" type="Label" parent="SettingsPopup/Main/VBoxContainer/HBoxContainer6"]
margin_top = 5.0
margin_right = 250.0
margin_bottom = 19.0
rect_min_size = Vector2( 250, 0 )
mouse_filter = 1
text = "Snippet editor's popup width"

[node name="EditorWidthSpinBox" type="SpinBox" parent="SettingsPopup/Main/VBoxContainer/HBoxContainer6"]
margin_left = 254.0
margin_right = 976.0
margin_bottom = 24.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 11
max_value = 6000.0
value = 1200.0

[node name="HBoxContainer7" type="HBoxContainer" parent="SettingsPopup/Main/VBoxContainer"]
margin_top = 224.0
margin_right = 976.0
margin_bottom = 248.0

[node name="EditorWidth3" type="Label" parent="SettingsPopup/Main/VBoxContainer/HBoxContainer7"]
margin_top = 5.0
margin_right = 250.0
margin_bottom = 19.0
rect_min_size = Vector2( 250, 0 )
hint_tooltip = "The default path saves the snippet file in the directory where Godot's saves a project's settings (user://../CodeSnippets.cfg). 

See Godot's documentation for get_user_data_dir() in the OS class.

You can manually enter a file path (file name is part of the file path) or use the FileDialog. If you choose a directory a CodeSnippets.cfg file will be created and the old snippets will be copied into the new file. If you choose an existing file, the plugin will try to load it.

Make sure the path exist otherwise it may cause Godot to crash. In that case you need to remove/redownload the plugin or manually edit the settings.cfg file to reset the settings."
mouse_filter = 1
text = "File path of snippet cfg file"

[node name="FilepathLineEdit" type="LineEdit" parent="SettingsPopup/Main/VBoxContainer/HBoxContainer7"]
margin_left = 254.0
margin_right = 944.0
margin_bottom = 24.0
hint_tooltip = "The default path saves the snippet file in the directory where Godot's saves a project's settings (user://../CodeSnippets.cfg). 

See Godot's documentation for get_user_data_dir() in the OS class.

You can manually enter a file path (file name is part of the file path) or use the FileDialog. If you choose a directory a CodeSnippets.cfg file will be created and the old snippets will be copied into the new file. If you choose an existing file, the plugin will try to load it.

Make sure the path exist otherwise it may cause Godot to crash. In that case you need to remove/redownload the plugin or manually edit the settings.cfg file to reset the settings."
size_flags_horizontal = 11
text = "user://../CodeSnippets.cfg"
caret_blink = true
caret_blink_speed = 0.5

[node name="FileDialogButton" type="Button" parent="SettingsPopup/Main/VBoxContainer/HBoxContainer7"]
margin_left = 948.0
margin_right = 976.0
margin_bottom = 24.0
hint_tooltip = "The default path saves the snippet file in the directory where Godot's saves a project's settings (user://../CodeSnippets.cfg). 

See Godot's documentation for get_user_data_dir() in the OS class.

You can manually enter a file path (file name is part of the file path) or use the FileDialog. If you choose a directory a CodeSnippets.cfg file will be created and the old snippets will be copied into the new file. If you choose an existing file, the plugin will try to load it.

Make sure the path exist otherwise it may cause Godot to crash. In that case you need to remove/redownload the plugin or manually edit the settings.cfg file to reset the settings."
icon = SubResource( 2 )

[node name="HBoxContainer9" type="HBoxContainer" parent="SettingsPopup/Main/VBoxContainer"]
margin_left = 388.0
margin_top = 530.0
margin_right = 588.0
margin_bottom = 552.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 4
size_flags_vertical = 10

[node name="CancelButton" type="Button" parent="SettingsPopup/Main/VBoxContainer/HBoxContainer9"]
margin_left = 9.0
margin_right = 89.0
margin_bottom = 22.0
rect_min_size = Vector2( 80, 0 )
hint_tooltip = "Quick access via Esc key."
size_flags_horizontal = 6
text = "Cancel"
icon = SubResource( 2 )

[node name="SaveButton" type="Button" parent="SettingsPopup/Main/VBoxContainer/HBoxContainer9"]
margin_left = 121.0
margin_right = 180.0
margin_bottom = 22.0
size_flags_horizontal = 6
size_flags_vertical = 10
text = "Save"
icon = SubResource( 2 )

[node name="FileDialog" type="FileDialog" parent="SettingsPopup"]
margin_right = 800.0
margin_bottom = 800.0
rect_min_size = Vector2( 800, 800 )
size_flags_horizontal = 0
size_flags_vertical = 0
window_title = "Open a File or Directory"
resizable = true
dialog_hide_on_ok = true
dialog_autowrap = true
mode = 3
access = 2
show_hidden_files = true
current_dir = "/home/toni/Godot/PluginDevelopment"
current_path = "/home/toni/Godot/PluginDevelopment/"

[node name="EnterShortcutPopup" type="WindowDialog" parent="SettingsPopup"]
anchor_right = 1.0
anchor_bottom = 1.0
window_title = "Enter Keyboard Shortcut"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="SettingsPopup/EnterShortcutPopup"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShortcutLabel" type="Label" parent="SettingsPopup/EnterShortcutPopup/MarginContainer"]
margin_left = 468.0
margin_top = 289.0
margin_right = 548.0
margin_bottom = 303.0
size_flags_horizontal = 6
size_flags_vertical = 6
text = "Press keys..."

[node name="SnippetEditor" parent="." instance=ExtResource( 2 )]
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0

[node name="OptionsPopup" parent="." instance=ExtResource( 3 )]
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
allow_search = true

[node name="StatusPopup" type="PopupPanel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -508.0
margin_top = -296.0
margin_right = 508.0
margin_bottom = 296.0
rect_min_size = Vector2( 115, 0 )
size_flags_horizontal = 4
size_flags_vertical = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="StatusPopup"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
size_flags_horizontal = 4
size_flags_vertical = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="StatusPopup/MarginContainer"]
margin_left = 472.0
margin_top = 282.0
margin_right = 536.0
margin_bottom = 302.0
size_flags_horizontal = 6
size_flags_vertical = 4

[node name="StatusMessage" type="Label" parent="StatusPopup/MarginContainer/HBoxContainer"]
margin_right = 48.0
margin_bottom = 14.0
size_flags_horizontal = 4
size_flags_vertical = 6
text = "Snippet"
align = 1

[node name="StatusIcon" type="Button" parent="StatusPopup/MarginContainer/HBoxContainer"]
margin_left = 52.0
margin_right = 52.0
margin_bottom = 14.0
focus_mode = 0
size_flags_horizontal = 4
size_flags_vertical = 4
enabled_focus_mode = 0
flat = true
[connection signal="popup_hide" from="." to="." method="_on_CodeSnippetPopup_popup_hide"]
[connection signal="text_changed" from="Main/VBoxContainer/HBoxContainer/Filter" to="." method="_on_Filter_text_changed"]
[connection signal="text_entered" from="Main/VBoxContainer/HBoxContainer/Filter" to="." method="_on_Filter_text_entered"]
[connection signal="pressed" from="Main/VBoxContainer/HBoxContainer/Copy" to="." method="_on_Copy_pressed"]
[connection signal="pressed" from="Main/VBoxContainer/HBoxContainer/Edit" to="." method="_on_Edit_pressed"]
[connection signal="pressed" from="Main/VBoxContainer/HBoxContainer/Settings" to="." method="_on_SettingsButton_pressed"]
[connection signal="item_activated" from="Main/VBoxContainer/ItemList" to="." method="_on_ItemList_item_activated"]
[connection signal="popup_hide" from="SettingsPopup" to="." method="_on_SettingsPopup_popup_hide"]
[connection signal="pressed" from="SettingsPopup/Main/VBoxContainer/HBoxContainer/EditShortcutButton" to="." method="_on_ShortcutEditButton_pressed"]
[connection signal="pressed" from="SettingsPopup/Main/VBoxContainer/HBoxContainer7/FileDialogButton" to="." method="_on_FileDialogButton_pressed"]
[connection signal="pressed" from="SettingsPopup/Main/VBoxContainer/HBoxContainer9/CancelButton" to="." method="_on_SettingsCancelButton_pressed"]
[connection signal="pressed" from="SettingsPopup/Main/VBoxContainer/HBoxContainer9/SaveButton" to="." method="_on_SettingsSaveButton_pressed"]
[connection signal="dir_selected" from="SettingsPopup/FileDialog" to="." method="_on_FileDialog_dir_selected"]
[connection signal="file_selected" from="SettingsPopup/FileDialog" to="." method="_on_FileDialog_file_selected"]
[connection signal="hide" from="SettingsPopup/EnterShortcutPopup" to="." method="_on_EnterShortcutPopup_modal_closed_or_hide"]
[connection signal="modal_closed" from="SettingsPopup/EnterShortcutPopup" to="." method="_on_EnterShortcutPopup_modal_closed_or_hide"]
[connection signal="popup_hide" from="SettingsPopup/EnterShortcutPopup" to="." method="_on_EnterShortcutPopup_modal_closed_or_hide"]
